# exa-ma

./: .gitignore  404.html  COMMIT_MESSAGE.md  Makefile  PC1-ExaMA - Document Scientifique.md  README-harvest.md  README.md  TROUBLESHOOTING.md  collaborative-projects.html  consortium.html  contact.html  deliverables.html  deliverables.yaml  exama.yaml  external-partners.html  index.html  news.html  news.yaml  overview.html  package-lock.json  package.json  partners.html  publications-hal.html  pyproject.toml  quickstart.html  results.html  sab.html  site.yml  sitemap.xml  team-recruited.html  team.html  workgroups.html  workpackages.html
docs/: antora.yml
exa-ma-software/: arcane.md  cgal.md  composyx.md  fabulous.md  freefempp.md  hawen.md  hpddm.md  index.md  mahyco.md  mumps.md  pastix.md  petsc.md  qr_mumps.md  samurai.md  trust_platform.md  uranie.md
exama/: about.html  contact.html  deliverables.html  index.html  news.html  overview.html  partners.html  publications-hal.html  quickstart.html  results.html  team.html  workgroups.html  workpackages.html
harvest/: __init__.py  cli.py  config.py  hal.py  news.py  partners.py  releases.py  team.py
highlights/: feelpp-benchmarking.html  neural-acceleration.html  scale.html  speedups.html  urban-meshing.html
news/: archive.html
software/: applications.html  arcane.html  cgal.html  composyx.html  concepts.html  fabulous.html  feelpp.html  frameworks.html  freefempp.html  hawen.html  hpddm.html  index.html  mahyco.html  mumps.html  pastix.html  petsc.html  qr_mumps.html  samurai.html  trust_platform.html  (+1 more)
(+226 files in other folders)
